--- a/UnionSquare.iOS/ELA/found/SuperPoint/ViewController/HMWtheCandidateListViewController.xib
+++ b/UnionSquare.iOS/ELA/found/SuperPoint/ViewController/HMWtheCandidateListViewController.xib
@@ -40,7 +40,7 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="全网投票比例：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hvY-28-VYF">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="全网投票占比：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hvY-28-VYF">
                             <rect key="frame" x="8" y="8" width="93" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="13" id="x8Z-7x-Vgv"/>
